syntax = "proto3";

option go_package = "dataproto";

package dataproto;

service addData {
    rpc AgregarData (requestData) returns (responseData) {}
}

message requestData {
    string team1 = 1;
    string team2 = 2;
    string score = 3;
    string phase = 4;
}

message responseData {
    string respuesta = 1;
}